--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,38 @@ PyDictionary
 PyPDF2
 psutil
 requests>=2.18.4
+screen
+scikit-image
+selenium
+speedtest-cli==2.1.3
+telegraph
+validators
+youtube_dl
+youtube-search-python
+youtube_search
+google-api-python-client==1.7.11
+google-auth==1.27.1
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.4
+googletrans==4.0.0rc1
+oauth2client==4.1.3
+httplib2==0.13.1
+git+https://github.com/buddhhu/search-engine-parser.git
+git+https://github.com/buddhhu/ofox.git
+gingerit
+html-telegraph-poster
+pyyaml
+hachoir
+aria2p
+gdown
+qrcode
+shazamio
+profanitydetector
+ffmpeg-python
+wheel
+TgCrypto
+ffmpeg
+python-arq
+future
+wget
+search_engine_parser
